rtest/tests/jsr335/Semantics/LambdaExpressions/Scope/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS


public class Test {
	public interface TestInterface {
		public int functMethod(int a); 
	}
	
	public static void main(String[] args) {
		TestInterface t = a -> {
			int b = a + 4;
			return b;
		};
    }
}